Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 6.0.0-beta1
-
None
-
-
71e6e30dbf9dbeaaeeeec10d8d0887fd8d8ead08 (qt-creator/qt-creator/6.0)
Description
Using variables like %{ActiveProject:BuildConfig:Path} or %{buildDir} in the working directory field of a run configuration does not work anymore.
Hovering over the field with a variable shows the correct path in a tooltip, but when trying to start the build executable, it fails with the message: "Failed to start program. Path or permissions wrong?"
Activating the "Run in terminal" option indicates that the variable is not replaced: "Cannot change to working directory "%{ActiveProject:BuildConfig:Path}""