ProjectExplorer: Fix expansion of variables in working directory

... when actually running the binary.
Amends 3dd8831f14.

Fixes: QTCREATORBUG-26438
Change-Id: I69fb8df514cb3ab00df76e241a3e367031fce94b
Reviewed-by: Eike Ziller <eike.ziller@qt.io>