src/plugins/projectexplorer/runconfigurationaspects.cpp
@@ -251,7 +251,9 @@ FilePath WorkingDirectoryAspect::workingDirectory() const
     const Environment env = m_envAspect ? m_envAspect->environment()
                                         : Environment::systemEnvironment();
     FilePath res = m_workingDirectory;
-    const QString workingDir = m_workingDirectory.path();
+    QString workingDir = m_workingDirectory.path();
+    if (m_macroExpander)
+        workingDir = m_macroExpander->expandProcessArgs(workingDir);
     res.setPath(PathChooser::expandedDirectory(workingDir, env, QString()));
     return res;
 }
